beer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: beer-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: myminikube.info
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
  - host: canaryislandsbeers.es
    http:
      paths:
      - path: /
        backend:
          serviceName: dorada
          servicePort: 80
  - host: madridbeers.es
    http:
      paths:
      - path: /
        backend:
          serviceName: mahou
          servicePort: 80
  - host: beers.info
    http:
      paths:
      - path: /
        backend:
          serviceName: dorada
          servicePort: 80
